assets/css/site.css
@import "../node_modules/prism-solarized-dark/prism-solarizeddark";
@import "../node_modules/@fortawesome/fontawesome-free/css/fontawesome";
@import "../node_modules/@fortawesome/fontawesome-free/css/brands";
@import "../node_modules/@fortawesome/fontawesome-free/css/solid";
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html {
        @apply font-serif text-neutral-100;
    }

    p {
        @apply mb-4 leading-relaxed tracking-wide;
    }

    a {
        @apply text-neutral-400 underline decoration-1 decoration-dotted transition duration-300;
    }


    a:hover {
        @apply text-neutral-100 font-semibold decoration-solid;
    }

    h1, h2, h3, h4, h5, h6 {
        @apply font-sans;
    }

    h1 {
        @apply font-bold text-8xl mb-2;
    }

    h2 {
        @apply font-bold text-6xl mb-2;
    }

    h3 {
        @apply font-bold text-4xl mb-2;
    }

    h4 {
        @apply font-bold text-2xl mb-2;
    }

    h5 {
        @apply font-bold text-xl mb-2;
    }

    ul {
        @apply list-disc list-outside mb-4 ml-5;
    }

    ol {
        @apply list-decimal list-outside mb-4 ml-5;
    }

    li {
        @apply font-sans;
    }

    kbd {
        @apply font-bold;
    }

    sup {
        @apply text-xs align-super;
    }

    img {
        @apply max-w-full;
    }

    blockquote {
        @apply border-neutral-500 border-solid border-l-4 pl-4;
    }
}

@layer components {
    .search-results {
        @apply absolute bg-white overflow-y-visible space-y-1 divide-y divide-solid divide-neutral-500 w-[25rem] rounded-lg list-none ml-0;
    }
}

/* The following are often injected after-the-fact or created via manual
 * processes, and will not be present in templates.
 * Creating them outside a layer ensures they are always present.
 */
.search-result {
    @apply block p-2 hover:bg-neutral-700 hover:text-neutral-100 hover:font-semibold;
}

.search-result a {
    @apply no-underline;
}

.laminas-tag-cloud {
    @apply list-none flex flex-row flex-wrap;
}

.laminas-tag-cloud li {
    @apply px-1 hover:font-semibold hover:text-white hover:underline;
}

.homepage-feed li {
    @apply ml-8;
}

.homepage-feed li img {
    @apply inline;
}

.comic {
    @apply p-8 w-full lg:w-1/2 xl:w-1/3 2xl:w-1/4;
}

.comic h4 {
    @apply w-full text-left;
}

.comic h4 a {
    @apply no-underline;
}

.comic p {
    @apply w-full;
}

